moving trix editor to our own component

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import 'trix/dist/trix';
+
 /* [data-type='section']:hover {
     outline: 2px solid red;
     outline-offset: -2px;
