--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -30,16 +30,23 @@
 }
 
 input[type='range'] {
+    @apply appearance-none outline-none bg-gray-200 h-2 w-full rounded-full;
+}
+
+/* input[type='range'] {
     -moz-appearance: none;
     -webkit-appearance: none;
-    background: #eef1f6;
-    border-radius: 3px;
-    height: 6px;
+    background: rgba(229, 231, 235, 1);
+    border-radius: 9999px;
+    height: 0.5rem;
     width: 100%;
-    margin-top: 15px;
-    margin-bottom: 15px;
     outline: none;
+} */
+
+input[type='range']::-webkit-slider-thumb {
+    @apply appearance-none outline-none h-6 w-6 rounded-full bg-gradient-to-br from-blue-500 to-blue-800 shadow-md;
 }
+/*
 input[type='range']::-webkit-slider-thumb {
     appearance: none;
     -webkit-appearance: none;
@@ -52,8 +59,13 @@ input[type='range']::-webkit-slider-thumb {
     cursor: pointer;
     height: 36px;
     width: 36px;
-}
+} */
+
 input[type='range']::-moz-range-thumb {
+    @apply appearance-none outline-none h-6 w-6 rounded-full bg-gradient-to-br from-blue-500 to-blue-800 shadow-md;
+}
+
+/* input[type='range']::-moz-range-thumb {
     background-color: #5f48ff;
     background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20width%3D%2212%22%20height%3D%228%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M8%20.5v7L12%204zM0%204l4%203.5v-7z%22%20fill%3D%22%23FFFFFF%22%20fill-rule%3D%22nonzero%22%2F%3E%3C%2Fsvg%3E');
     background-position: center;
@@ -64,8 +76,13 @@ input[type='range']::-moz-range-thumb {
     cursor: pointer;
     height: 36px;
     width: 36px;
-}
+} */
+
 input[type='range']::-ms-thumb {
+    @apply appearance-none outline-none h-6 w-6 rounded-full bg-gradient-to-br from-blue-500 to-blue-800 shadow-md;
+}
+
+/* input[type='range']::-ms-thumb {
     background-color: #5f48ff;
     background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20width%3D%2212%22%20height%3D%228%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M8%20.5v7L12%204zM0%204l4%203.5v-7z%22%20fill%3D%22%23FFFFFF%22%20fill-rule%3D%22nonzero%22%2F%3E%3C%2Fsvg%3E');
     background-position: center;
@@ -75,7 +92,8 @@ input[type='range']::-ms-thumb {
     cursor: pointer;
     height: 36px;
     width: 36px;
-}
-input[type='range']::-moz-focus-outer {
+} */
+
+/* input[type='range']::-moz-focus-outer {
     border: 0;
-}
+} */
